Started implementing get-profile
