# doc/api.yaml
@@ -42,10 +42,9 @@ components:
       minLength: 36
 
     commentID:
-      type: string
-      pattern: "^[a-z0-9]"
+      type: integer
       description: comment identifier
-      example: "abcdef012345"
+      example: 1
       maxLength: 12
       minLength: 12
 
@@ -58,7 +57,7 @@ components:
           $ref: "#/components/schemas/identifier"
         text:
           type: string
-          pattern: "^[a-zA-Z0-9 .,:]*$"
+          pattern: 'ˆ.*?$'
           description: comment
           example: "This is a comment"
           minLength: 1
@@ -71,10 +70,9 @@ components:
           $ref: "#/components/schemas/identifier"
 
     photoID:
-      type: string
-      pattern: "^[a-z0-9]"
+      type: integer
       description: photo identifier
-      example: "abcdef012345"
+      example: 1
       maxLength: 12
       minLength: 12
 
@@ -84,28 +82,27 @@ components:
       properties:
         id:
           $ref: "#/components/schemas/photoID"
+        photoOwner:
+          $ref: "#/components/schemas/identifier"
+        image/png:
+          type: string
+          format: binary
+          description: The photo
         likes:
-          description: array of likes
-          type: array
-          items:
-            $ref: "#/components/schemas/like"
-          minItems: 0
-          maxItems: 100 #Limit the size of the array to 100 elements per chuck
+          description: Number of likes
+          type: integer
         comments:
-          description: array of comments
-          type: array
-          items:
-            $ref: "#/components/schemas/comment"
-          minItems: 0
-          maxItems: 100 #Limit the size of the array to 100 elements per chuck
+          description: number of comments
+          type: integer
 
     username:
       type: string
-      pattern: "^[a-zA-Z0-9]*$"
+      pattern: 'ˆ.*?$'
       description: username
       example: "Maria"
       maxLength: 16
       minLength: 3
+
 
     profile:
       description: user profile
@@ -117,30 +114,15 @@ components:
           description: List of photos uploaded by the user
           type: array
           items:
-            $ref: "#/components/schemas/photo"
-          maxItems: 100 #Limit the size of the array to 100 elements per chuck
+            $ref: "#/components/schemas/photoID"
+          maxItems: 30                                      #Limit the size of the array to 30 elements per chuck
           minItems: 0
         followers:
-          description: List of users following the user
-          type: array
-          items:
-            $ref: "#/components/schemas/identifier"
-          minItems: 0
-          maxItems: 100 #Limit the size of the array to 100 elements per chuck
+          description: Number of users following the user
+          type: integer
         following:
-          description: List of users followed by the user
-          type: array
-          items:
-            $ref: "#/components/schemas/identifier"
-          minItems: 0
-          maxItems: 100 #Limit the size of the array to 100 elements per chuck
-        blocked:
-          description: List of users blocked by the user
-          type: array
-          items:
-            $ref: "#/components/schemas/identifier"
-          minItems: 0
-          maxItems: 100 #Limit the size of the array to 100 elements per chuck
+          description: Number of users followed by the user
+          type: integer
 
     error:
       description: Error message
@@ -206,6 +188,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/identifier"
+
+  # TODO 1: Add the /home endpoint
   /home:
     get:
       description: Returns the photos of the users that the user is following (the stream)
@@ -228,9 +212,12 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
+      
+  #TODO Fix the return value of the /photos/{photoID} endpoint
+
   /photos/{photoID}:
     get:
-      description: Returns the binary data of the photo with the specified identifier
+      description: Returns the photo with the specified identifier (photoID)
       summary: Returns the photo
       tags: ["photo"]
       operationId: getPhoto
@@ -245,15 +232,16 @@ paths:
         "200":
           description: Photo with the specified identifier
           content:
-            image/png:
+            application/json:
               schema:
-                description: Photo with the specified identifier
-                type: string
-                format: binary
+                $ref: "#/components/schemas/photo"
         "401":
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
+
+  #TODO Implement the /users like endpoint with pagination
+
   /users:
     get:
       summary: Get the list of all users
@@ -285,6 +273,8 @@ paths:
         "404":
           $ref: "#/components/responses/NotFound"
 
+  #TODO Implement the /users/{userID} endpoint with pagination
+
   /users/{userID}:
     parameters:
       - name: userID
@@ -310,7 +300,10 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
-  /users/{userID}/username: 
+
+  #TODO Almeno questo l'ho fatto 
+  
+  /users/{userID}/username:
     parameters:
       - name: userID
         in: path
@@ -348,6 +341,8 @@ paths:
                 $ref: "#/components/schemas/error"
         "404":
           $ref: "#/components/responses/NotFound"
+
+  #TODO Questo è stato implementato
 
   /users/{userID}/bans/{blockedID}:
     parameters:
@@ -394,6 +389,8 @@ paths:
         "404":
           $ref: "#/components/responses/NotFound"
 
+  # TODO Questo è stato implementato
+
   /users/{userID}/followers/{followerID}:
     parameters:
       - name: userID
@@ -434,6 +431,8 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
+
+  #TODO Questo è stato implementato, devo fare la paginazione su un'altra path
 
   /users/{userID}/photos/{photoID}/likes/{likeID}:
     parameters:
@@ -482,6 +481,8 @@ paths:
         "404":
           $ref: "#/components/responses/NotFound"
 
+  #TODO Questo è stato implementato
+
   /users/{userID}/photos/{photoID}/comments/{commentID}:
     parameters:
       - name: photoID
@@ -515,6 +516,9 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
+
+  #TODO Questo è stato implementato, devo aggiungere la pagination 
+
   /users/{userID}/photos/{photoID}/comments:
     parameters:
       - name: photoID
@@ -558,6 +562,9 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
+
+  #TODO Questo è stato implementato
+
   /users/{userID}/photos:
     parameters:
       - name: userID
@@ -594,6 +601,9 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "404":
           $ref: "#/components/responses/NotFound"
+
+  #TODO Questo è stato implementato
+
   /users/{userID}/photos/{photoID}:
     parameters:
       - name: userID
